Tratando de completar el main, sin embargo algunas funciones faltan completar. El main lee el archivo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Projectdepoo)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Projectdepoo main.cpp producto.cpp producto.h libro.cpp libro.h dispositivo.cpp dispositivo.h robot.cpp robot.h tipos.h stack.cpp stack.h almacen.cpp almacen.h disco.cpp disco.h)
+add_executable(Projectdepoo main.cpp producto.cpp producto.h libro.cpp libro.h dispositivo.cpp dispositivo.h robot.cpp robot.h tipos.h stack.cpp stack.h almacen.cpp almacen.h disco.cpp disco.h leerDatos.h)
